# weaver

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  main.rs  safety.rs  state.rs
src-tauri/src/git/: diff.rs  repo.rs
src-tauri/src/merge/: hunk.rs  mod.rs  resolver.rs  structural.rs  three_way.rs
src/components/: EditorPane.tsx  HunkActions.tsx  MergeView.tsx  StatusBar.tsx  Toolbar.tsx
src/hooks/: useConflictNavigation.ts  useMergeSession.ts  useScrollSync.ts
src/lib/: decorations.ts  tauri-commands.ts  types.ts
